login work done

--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -39,6 +39,11 @@
     background-color: lightcoral;
 }
 
+.loginBtn:disabled{
+    cursor: not-allowed;
+    background-color: grey;
+}
+
 .loginBtn:hover{
     background-color: red;
 }
